--- a/style.css
+++ b/style.css
@@ -148,8 +148,9 @@ li strong {
         opacity: 0.9;
     }
 
-    50% {
+    20% {
         opacity: 0.9;
+        z-index:-1;
     }
 
     100% {
