--- a/style.css
+++ b/style.css
@@ -149,16 +149,23 @@ li strong {
         z-index:-1;
     }
 
-    20% {
+   
+    10% {
         opacity: 0.9;
         z-index:-1;
     }
 
-    100% {
-        top: 100%;
-        opacity: 0;
+    95% {
+        opacity: 0.9;
         z-index:-1;
     }
+
+     100% {
+        top: 100%;
+        opacity: 0;
+        z-index:1;
+    }
+}
 }
 
 /* Snowflake Styling */
