--- a/style.css
+++ b/style.css
@@ -155,15 +155,19 @@ li strong {
         z-index:-1;
     }
 
-    95% {
+    80% {
         opacity: 0.9;
         z-index:-1;
+    }
+    90% {
+        opacity: 0.9;
+        z-index:1;
     }
 
      100% {
         top: 100%;
         opacity: 0;
-        z-index:1;
+        
     }
 }
 }
